fixed wow.js link

--- a/partials/js.jade
+++ b/partials/js.jade
@@ -15,7 +15,7 @@ script(src='js/core/scroll-parallax.min.js')
 script(src='js/core/mouse-parallax/mouse-parallax.min.js')
 //- wow.js
 //- Docs: http://mynameismatthieu.com/WOW/docs.html
-script(src='js/wow.js')
+script(src='js/core/wow.js')
 
 
 //- Run Foundation Javascript
